--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <span class="roll-text">Let's Go</span>
         </a>
     </div>
+
+    <h6 style="position: fixed; bottom: 5vh; color: white;">Created by elainechang86@gmail.com</h6>
 </body>
 
 <style>
