--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="Loading">
     </div>
-    <h1 style="position: fixed; top: 35vh; color: white;">啊你是要跑多久？？</h1>
-    <h1 style="position: fixed; top: 28vh; color: white;">How long are u going to take？？</h1>
+    <h1 style="position: fixed; top: 35vh; color: white;">？？啊你是要跑多久？？</h1>
+    <h1 style="position: fixed; top: 28vh; color: white;">？？How long are u going to take？？</h1>
 
     <div class="wrap">
         <a class="button rollover" href="https://www.coolpc.com.tw/evaluate.php">
