--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
     .rollover:hover .roll-text:first-child {
         margin-top: -38px;
     }
+    
+    @media screen and (max-width: 900px) {
+        h1 {
+            font-size: 18px;
+        }
+        .button {
+            width: 80vw;
+            left: 10vw;
+        }
+    }
 </style>
 
 </html>
